Fixing delete bug and text overflow

--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -9,3 +9,27 @@ header .logo {
     left: 20px;
     height: 100%;
 }
+
+header #api_status {
+    float: right;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-top: 15px;
+    margin-right: 30px;
+    background-color: #CCCCCC;
+}
+
+header .available {
+    background-color: #ff545f !important;
+}
+
+.amenities .point {
+    width: 100%;
+    white-space: nowrap;
+}
+
+.amenities .point h4 {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
